2014-03-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/pandora_snmp_browser.js,
	include/functions_snmp_browser.php: cleaned source code style.
	
	* godmode/agentes/module_manager_editor_network.php: fixed the
	javascript include for policies.
	
	Incident: #616

2014-03-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * include/functions_reporting.php: sla reports with sla
        completion equal to 100 are ok, not "inside limits".

2014-03-09  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_ipam.php: Added japanese ipam help file.

2014-03-07  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/status_monitor.php,
	operation/agentes/estado_monitores.php: added the snapshot feature
	in the view of monitors.

2014-03-06  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php,
	operation/visual_console/render_view.php: cleaned source code style.
	
	* include/functions_reporting.php: fixed the legend for the graphs
	into the topn element report.
	
	Incident: #597

2014-03-06  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/snapshot_view.php: fixed the lost scrollbars.

2014-03-06  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora_alerts.js: Added missed code
	in action recovery fields feature

2014-03-05  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_ipam.php: Fix typo

2014-03-05  Sergio Martin <sergio.martin@artica.es>

	* images/automatic.png
	images/manual.png
	images/calculator.png: Add missed images for IPAM

2014-03-05  Miguel de Dios <miguel.dedios@artica.es>
	
	* index.php, operation/search_results.php: fixed the global search
	when the text to search end with whitespace.
	
	Incident: #605

2014-03-05  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/ajax/module.php: fixed the ajax calls for to get json
	data.
	
	Incident: #619

2014-03-05  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql